--- a/archives/zhihu-search/2024-03-31.md
+++ b/archives/zhihu-search/2024-03-31.md
@@ -1,12 +1,11 @@
 # 2024-03-31
 
-共 10 条
+共 11 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Sun Mar 31 2024 18:00:45 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Sun Mar 31 2024 19:00:54 GMT+0800 (China Standard Time) -->
 1. [碳中和](https://www.zhihu.com/search?q=碳中和)
 1. [今日A股市场](https://www.zhihu.com/search?q=今日A股市场)
-1. [雨果奖](https://www.zhihu.com/search?q=雨果奖)
 1. [在职研究生](https://www.zhihu.com/search?q=在职研究生)
 1. [软件工程](https://www.zhihu.com/search?q=软件工程)
 1. [openai](https://www.zhihu.com/search?q=openai)
@@ -14,4 +13,6 @@
 1. [在职考研](https://www.zhihu.com/search?q=在职考研)
 1. [mba有必要读吗](https://www.zhihu.com/search?q=mba有必要读吗)
 1. [cpa如何规划备考](https://www.zhihu.com/search?q=cpa如何规划备考)
+1. [在职研究生有必要读嘛](https://www.zhihu.com/search?q=在职研究生有必要读嘛)
+1. [雨果奖](https://www.zhihu.com/search?q=雨果奖)
 <!-- END ZHIHUSEARCH -->
