--- a/archives/toutiao-search/2024-04-01.md
+++ b/archives/toutiao-search/2024-04-01.md
@@ -1,55 +1,78 @@
 # 2024-04-01
 
-共 224 条
+共 244 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Apr 01 2024 16:00:47 GMT+0800 (China Standard Time) -->
-1. [马英九率台湾青年抵达深圳](https://so.toutiao.com/search?keyword=马英九率台湾青年抵达深圳)
-1. [马英九为何选择参观大疆腾讯比亚迪](https://so.toutiao.com/search?keyword=马英九为何选择参观大疆腾讯比亚迪)
-1. [淳朴云南热情洋溢](https://so.toutiao.com/search?keyword=淳朴云南热情洋溢)
+<!-- 最后更新时间 Mon Apr 01 2024 17:00:50 GMT+0800 (China Standard Time) -->
+1. [买保时捷送小米SU7？门店回应](https://so.toutiao.com/search?keyword=买保时捷送小米SU7？门店回应)
 1. [网友：整个上饶被“提灯定损”牵连](https://so.toutiao.com/search?keyword=网友：整个上饶被“提灯定损”牵连)
-1. [解放军将在中缅边境实兵实弹演习](https://so.toutiao.com/search?keyword=解放军将在中缅边境实兵实弹演习)
-1. [保时捷门店回应买保时捷送小米SU7](https://so.toutiao.com/search?keyword=保时捷门店回应买保时捷送小米SU7)
-1. [南昌雷暴大风一小区3人坠亡](https://so.toutiao.com/search?keyword=南昌雷暴大风一小区3人坠亡)
+1. [淳朴云南热情洋溢](https://so.toutiao.com/search?keyword=淳朴云南热情洋溢)
 1. [外资买走万达 下一个会是万科吗](https://so.toutiao.com/search?keyword=外资买走万达+下一个会是万科吗)
-1. [朝皮划艇游客扔石头的员工被开除](https://so.toutiao.com/search?keyword=朝皮划艇游客扔石头的员工被开除)
-1. [6人因“咸猪手”引发斗殴均被控制](https://so.toutiao.com/search?keyword=6人因“咸猪手”引发斗殴均被控制)
-1. [南昌突起强风 男子抱住大棚被吹飞](https://so.toutiao.com/search?keyword=南昌突起强风+男子抱住大棚被吹飞)
+1. [解放军将在中缅边境实兵实弹演习](https://so.toutiao.com/search?keyword=解放军将在中缅边境实兵实弹演习)
+1. [4楼男子厨房抽烟2楼邻居找上门](https://so.toutiao.com/search?keyword=4楼男子厨房抽烟2楼邻居找上门)
+1. [马英九二度访问大陆有何积极意义](https://so.toutiao.com/search?keyword=马英九二度访问大陆有何积极意义)
+1. [山东台儿庄多人持棍棒砸电动车](https://so.toutiao.com/search?keyword=山东台儿庄多人持棍棒砸电动车)
+1. [人民热评：《王婆说媒》不应被干扰](https://so.toutiao.com/search?keyword=人民热评：《王婆说媒》不应被干扰)
+1. [外卖员被撞后遭顶出数十米](https://so.toutiao.com/search?keyword=外卖员被撞后遭顶出数十米)
+1. [马英九率台湾青年抵达深圳](https://so.toutiao.com/search?keyword=马英九率台湾青年抵达深圳)
 1. [灵隐寺：从未开通或授权开通商户号](https://so.toutiao.com/search?keyword=灵隐寺：从未开通或授权开通商户号)
+1. [南昌突起强风 男子抱住大棚被吹飞](https://so.toutiao.com/search?keyword=南昌突起强风+男子抱住大棚被吹飞)
 1. [官方通报女子22楼扔下孩子：突发躁狂](https://so.toutiao.com/search?keyword=官方通报女子22楼扔下孩子：突发躁狂)
-1. [南昌强对流天气致4死10余伤](https://so.toutiao.com/search?keyword=南昌强对流天气致4死10余伤)
+1. [马英九为何选择参观大疆腾讯比亚迪](https://so.toutiao.com/search?keyword=马英九为何选择参观大疆腾讯比亚迪)
+1. [南昌雷暴大风一小区3人坠亡](https://so.toutiao.com/search?keyword=南昌雷暴大风一小区3人坠亡)
 1. [普京幽默化解位置被州长误坐的尴尬](https://so.toutiao.com/search?keyword=普京幽默化解位置被州长误坐的尴尬)
 1. [法院认定郑爽无财产可供执行](https://so.toutiao.com/search?keyword=法院认定郑爽无财产可供执行)
+1. [南昌强对流天气致4死10余伤](https://so.toutiao.com/search?keyword=南昌强对流天气致4死10余伤)
+1. [海清素颜回老家祭祖](https://so.toutiao.com/search?keyword=海清素颜回老家祭祖)
+1. [俄安全局长：知道谁是恐袭组织者](https://so.toutiao.com/search?keyword=俄安全局长：知道谁是恐袭组织者)
 1. [南昌红谷滩1600多棵树一夜被吹倒](https://so.toutiao.com/search?keyword=南昌红谷滩1600多棵树一夜被吹倒)
 1. [88岁王德顺穿大花袄走秀](https://so.toutiao.com/search?keyword=88岁王德顺穿大花袄走秀)
-1. [海清素颜回老家祭祖](https://so.toutiao.com/search?keyword=海清素颜回老家祭祖)
+1. [央媒：规培医生不该成为廉价劳动力](https://so.toutiao.com/search?keyword=央媒：规培医生不该成为廉价劳动力)
+1. [南昌为何会突发强对流天气](https://so.toutiao.com/search?keyword=南昌为何会突发强对流天气)
+1. [中方遇难人员遗体告别仪式在巴举行](https://so.toutiao.com/search?keyword=中方遇难人员遗体告别仪式在巴举行)
+1. [朝皮划艇游客扔石头的员工被开除](https://so.toutiao.com/search?keyword=朝皮划艇游客扔石头的员工被开除)
+1. [文森特：詹姆斯证明了他的努力勤勉](https://so.toutiao.com/search?keyword=文森特：詹姆斯证明了他的努力勤勉)
+1. [13岁女孩帮同学取快递失踪 家属发声](https://so.toutiao.com/search?keyword=13岁女孩帮同学取快递失踪+家属发声)
+1. [万达获600亿元投资背后](https://so.toutiao.com/search?keyword=万达获600亿元投资背后)
+1. [躁狂状态下杀人如何判决](https://so.toutiao.com/search?keyword=躁狂状态下杀人如何判决)
+1. [父亲戒烟酒多年 临终前儿子陪喝酒](https://so.toutiao.com/search?keyword=父亲戒烟酒多年+临终前儿子陪喝酒)
+1. [海南旅游遭雷击男子不幸身亡](https://so.toutiao.com/search?keyword=海南旅游遭雷击男子不幸身亡)
+1. [小米SU7创始版第2轮追加开售已售罄](https://so.toutiao.com/search?keyword=小米SU7创始版第2轮追加开售已售罄)
+1. [首饰金价格逼近每克700元](https://so.toutiao.com/search?keyword=首饰金价格逼近每克700元)
+1. [6人因“咸猪手”引发斗殴均被控制](https://so.toutiao.com/search?keyword=6人因“咸猪手”引发斗殴均被控制)
+1. [中缅警方在缅北开展联合打击行动](https://so.toutiao.com/search?keyword=中缅警方在缅北开展联合打击行动)
+1. [乌方：俄军或再次进攻基辅](https://so.toutiao.com/search?keyword=乌方：俄军或再次进攻基辅)
+1. [菲称中国“以大欺小” 外交部驳斥](https://so.toutiao.com/search?keyword=菲称中国“以大欺小”+外交部驳斥)
+1. [为何银行会反过来向员工讨薪](https://so.toutiao.com/search?keyword=为何银行会反过来向员工讨薪)
+1. [92号汽油重回8元时代](https://so.toutiao.com/search?keyword=92号汽油重回8元时代)
+1. [台学者：台湾应提出两岸统一方案](https://so.toutiao.com/search?keyword=台学者：台湾应提出两岸统一方案)
+1. [29岁旅日大熊猫爽爽因病死亡](https://so.toutiao.com/search?keyword=29岁旅日大熊猫爽爽因病死亡)
+1. [斯洛伐克飞行汽车将在中国生产](https://so.toutiao.com/search?keyword=斯洛伐克飞行汽车将在中国生产)
+1. [江西灵山景区玩梗：不收磨损费](https://so.toutiao.com/search?keyword=江西灵山景区玩梗：不收磨损费)
+1. [女子熬夜后报复式补觉一天饿晕倒](https://so.toutiao.com/search?keyword=女子熬夜后报复式补觉一天饿晕倒)
+1. [张颂文返乡参加亲戚婚礼](https://so.toutiao.com/search?keyword=张颂文返乡参加亲戚婚礼)
+1. [俄对乌用大威力炸弹 爆炸云高千米](https://so.toutiao.com/search?keyword=俄对乌用大威力炸弹+爆炸云高千米)
+1. [开封王婆：说媒现在变味了](https://so.toutiao.com/search?keyword=开封王婆：说媒现在变味了)
+1. [中日专家已就福岛核污染水排海对话](https://so.toutiao.com/search?keyword=中日专家已就福岛核污染水排海对话)
+1. [保时捷门店回应买保时捷送小米SU7](https://so.toutiao.com/search?keyword=保时捷门店回应买保时捷送小米SU7)
 1. [成都一迈巴赫连撞多人致2死2伤](https://so.toutiao.com/search?keyword=成都一迈巴赫连撞多人致2死2伤)
 1. [贾跃亭评小米汽车：非常成功](https://so.toutiao.com/search?keyword=贾跃亭评小米汽车：非常成功)
 1. [开封王婆：自带剧本的不要凑热闹](https://so.toutiao.com/search?keyword=开封王婆：自带剧本的不要凑热闹)
 1. [专家：美军真的在为介入台海做准备](https://so.toutiao.com/search?keyword=专家：美军真的在为介入台海做准备)
 1. [姐弟俩同时从12层坠亡 警方通报](https://so.toutiao.com/search?keyword=姐弟俩同时从12层坠亡+警方通报)
 1. [公安系统人事密集调整](https://so.toutiao.com/search?keyword=公安系统人事密集调整)
-1. [女子熬夜后报复式补觉一天饿晕倒](https://so.toutiao.com/search?keyword=女子熬夜后报复式补觉一天饿晕倒)
-1. [小米SU7创始版第2轮追加开售已售罄](https://so.toutiao.com/search?keyword=小米SU7创始版第2轮追加开售已售罄)
-1. [4楼男子厨房抽烟2楼邻居找上门](https://so.toutiao.com/search?keyword=4楼男子厨房抽烟2楼邻居找上门)
-1. [13岁女孩帮同学取快递失踪 家属发声](https://so.toutiao.com/search?keyword=13岁女孩帮同学取快递失踪+家属发声)
 1. [中方：菲应停止拉域外势力介入南海](https://so.toutiao.com/search?keyword=中方：菲应停止拉域外势力介入南海)
 1. [重庆扔小孩母亲避开了楼下安全气囊](https://so.toutiao.com/search?keyword=重庆扔小孩母亲避开了楼下安全气囊)
-1. [央媒：规培医生不该成为廉价劳动力](https://so.toutiao.com/search?keyword=央媒：规培医生不该成为廉价劳动力)
 1. [围观开封王婆说媒现场](https://so.toutiao.com/search?keyword=围观开封王婆说媒现场)
 1. [媒体评女子扔孩子下楼：跌破人伦底线](https://so.toutiao.com/search?keyword=媒体评女子扔孩子下楼：跌破人伦底线)
-1. [南昌为何会突发强对流天气](https://so.toutiao.com/search?keyword=南昌为何会突发强对流天气)
 1. [体彩回应网友称买到透光刮刮乐](https://so.toutiao.com/search?keyword=体彩回应网友称买到透光刮刮乐)
 1. [律师：高空抛子是否担刑责看精神状态](https://so.toutiao.com/search?keyword=律师：高空抛子是否担刑责看精神状态)
-1. [张颂文返乡参加亲戚婚礼](https://so.toutiao.com/search?keyword=张颂文返乡参加亲戚婚礼)
 1. [业主回应占位车拆焊条：不接受调解](https://so.toutiao.com/search?keyword=业主回应占位车拆焊条：不接受调解)
 1. [台军方辩解士兵被大陆无人机吓跑](https://so.toutiao.com/search?keyword=台军方辩解士兵被大陆无人机吓跑)
 1. [建材老板称曾倒贴退房事件房东几千](https://so.toutiao.com/search?keyword=建材老板称曾倒贴退房事件房东几千)
-1. [斯洛伐克飞行汽车将在中国生产](https://so.toutiao.com/search?keyword=斯洛伐克飞行汽车将在中国生产)
 1. [《欢乐颂5》何悯鸿帮方芷衡看妹妹](https://so.toutiao.com/search?keyword=《欢乐颂5》何悯鸿帮方芷衡看妹妹)
 1. [岳阳版“王婆说媒”引爆汴河街](https://so.toutiao.com/search?keyword=岳阳版“王婆说媒”引爆汴河街)
 1. [小米汽车回应建议舒淇代言SU7](https://so.toutiao.com/search?keyword=小米汽车回应建议舒淇代言SU7)
-1. [首饰金价格逼近每克700元](https://so.toutiao.com/search?keyword=首饰金价格逼近每克700元)
 1. [马英九访问大陆11天完整行程公布](https://so.toutiao.com/search?keyword=马英九访问大陆11天完整行程公布)
 1. [俄黑海舰队或已损失三分之一战舰](https://so.toutiao.com/search?keyword=俄黑海舰队或已损失三分之一战舰)
 1. [中国陆军赴俄参赛队抵达莫斯科](https://so.toutiao.com/search?keyword=中国陆军赴俄参赛队抵达莫斯科)
@@ -59,7 +82,6 @@
 1. [大V：谁给提灯定损房东讹人的底气](https://so.toutiao.com/search?keyword=大V：谁给提灯定损房东讹人的底气)
 1. [3岁孩子被从22楼扔下 媒体回访现场](https://so.toutiao.com/search?keyword=3岁孩子被从22楼扔下+媒体回访现场)
 1. [卡友举报江西汽修店：千元费用变1.7万](https://so.toutiao.com/search?keyword=卡友举报江西汽修店：千元费用变1.7万)
-1. [为何银行会反过来向员工讨薪](https://so.toutiao.com/search?keyword=为何银行会反过来向员工讨薪)
 1. [352名缅北电诈嫌疑人移交中方](https://so.toutiao.com/search?keyword=352名缅北电诈嫌疑人移交中方)
 1. [金价一路狂飙 多只基金水涨船高](https://so.toutiao.com/search?keyword=金价一路狂飙+多只基金水涨船高)
 1. [翁虹巫启贤等送别何厚华](https://so.toutiao.com/search?keyword=翁虹巫启贤等送别何厚华)
@@ -81,7 +103,6 @@
 1. [以色列加快在加沙建“无人区”](https://so.toutiao.com/search?keyword=以色列加快在加沙建“无人区”)
 1. [老人晨练打球被指扰民保安躺地阻止](https://so.toutiao.com/search?keyword=老人晨练打球被指扰民保安躺地阻止)
 1. [突发强对流天气时如何避险](https://so.toutiao.com/search?keyword=突发强对流天气时如何避险)
-1. [江西灵山景区玩梗：不收磨损费](https://so.toutiao.com/search?keyword=江西灵山景区玩梗：不收磨损费)
 1. [小米汽车回应漂移模式使用场景](https://so.toutiao.com/search?keyword=小米汽车回应漂移模式使用场景)
 1. [日本石川震后3个月仍有超8千人避难](https://so.toutiao.com/search?keyword=日本石川震后3个月仍有超8千人避难)
 1. [房东探照灯检查涉嫌敲诈勒索吗](https://so.toutiao.com/search?keyword=房东探照灯检查涉嫌敲诈勒索吗)
@@ -115,7 +136,6 @@
 1. [本赛季曼城对英超前5球队未尝一胜](https://so.toutiao.com/search?keyword=本赛季曼城对英超前5球队未尝一胜)
 1. [13岁女孩称帮同学取快递已失踪7天](https://so.toutiao.com/search?keyword=13岁女孩称帮同学取快递已失踪7天)
 1. [最高法发布饲养动物损害责任案例](https://so.toutiao.com/search?keyword=最高法发布饲养动物损害责任案例)
-1. [开封王婆：说媒现在变味了](https://so.toutiao.com/search?keyword=开封王婆：说媒现在变味了)
 1. [午评：沪指涨超1% 创业板指涨2.63%](https://so.toutiao.com/search?keyword=午评：沪指涨超1%+创业板指涨2.63%)
 1. [网友称体制内工作超稳定没勇气离开](https://so.toutiao.com/search?keyword=网友称体制内工作超稳定没勇气离开)
 1. [开封龙亭区多举措保障游客体验](https://so.toutiao.com/search?keyword=开封龙亭区多举措保障游客体验)
