--- a/archives/zhihu-search/2024-04-01.md
+++ b/archives/zhihu-search/2024-04-01.md
@@ -1,18 +1,19 @@
 # 2024-04-01
 
-共 11 条
+共 12 条
 
 <!-- BEGIN ZHIHUSEARCH -->
-<!-- 最后更新时间 Mon Apr 01 2024 18:01:19 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Apr 01 2024 19:00:59 GMT+0800 (China Standard Time) -->
 1. [碳中和](https://www.zhihu.com/search?q=碳中和)
 1. [在职研究生](https://www.zhihu.com/search?q=在职研究生)
 1. [软件工程](https://www.zhihu.com/search?q=软件工程)
-1. [梁靖崑男单冠军](https://www.zhihu.com/search?q=梁靖崑男单冠军)
 1. [openai](https://www.zhihu.com/search?q=openai)
 1. [非全日制计算机研究生](https://www.zhihu.com/search?q=非全日制计算机研究生)
 1. [在职考研](https://www.zhihu.com/search?q=在职考研)
 1. [mba有必要读吗](https://www.zhihu.com/search?q=mba有必要读吗)
 1. [cpa如何规划备考](https://www.zhihu.com/search?q=cpa如何规划备考)
 1. [在职研究生有必要读嘛](https://www.zhihu.com/search?q=在职研究生有必要读嘛)
+1. [专升本真的有必要吗](https://www.zhihu.com/search?q=专升本真的有必要吗)
+1. [梁靖崑男单冠军](https://www.zhihu.com/search?q=梁靖崑男单冠军)
 1. [今日A股市场](https://www.zhihu.com/search?q=今日A股市场)
 <!-- END ZHIHUSEARCH -->
