--- a/archives/toutiao-search/2024-04-02.md
+++ b/archives/toutiao-search/2024-04-02.md
@@ -1,48 +1,72 @@
 # 2024-04-02
 
-共 249 条
+共 269 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 02 2024 17:01:01 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Apr 02 2024 18:00:55 GMT+0800 (China Standard Time) -->
 1. [江西省政协主席唐一军被查](https://so.toutiao.com/search?keyword=江西省政协主席唐一军被查)
 1. [中方回应以色列空袭伊朗驻叙使馆](https://so.toutiao.com/search?keyword=中方回应以色列空袭伊朗驻叙使馆)
 1. [制造业产需指数向好预示着什么](https://so.toutiao.com/search?keyword=制造业产需指数向好预示着什么)
-1. [唐一军3月仍出席公开活动](https://so.toutiao.com/search?keyword=唐一军3月仍出席公开活动)
+1. [央媒：提灯定损照出的是市场乱象](https://so.toutiao.com/search?keyword=央媒：提灯定损照出的是市场乱象)
 1. [以轰炸伊朗使馆会引发中东新大战吗](https://so.toutiao.com/search?keyword=以轰炸伊朗使馆会引发中东新大战吗)
-1. [小米SU7退订率40%](https://so.toutiao.com/search?keyword=小米SU7退订率40%)
+1. [马英九反问车上视频开会功能有必要吗](https://so.toutiao.com/search?keyword=马英九反问车上视频开会功能有必要吗)
+1. [唐一军3月仍出席公开活动](https://so.toutiao.com/search?keyword=唐一军3月仍出席公开活动)
+1. [江西盛产成语：提灯定损 天价彩礼](https://so.toutiao.com/search?keyword=江西盛产成语：提灯定损+天价彩礼)
 1. [南昌大风为什么能把人从被窝里吹走](https://so.toutiao.com/search?keyword=南昌大风为什么能把人从被窝里吹走)
 1. [专家：以色列轰炸伊朗大使馆必将遭报复](https://so.toutiao.com/search?keyword=专家：以色列轰炸伊朗大使馆必将遭报复)
-1. [贾跃亭造车至今共交付11辆并全召回](https://so.toutiao.com/search?keyword=贾跃亭造车至今共交付11辆并全召回)
-1. [3人坠亡小区物业：业主自行封装阳台](https://so.toutiao.com/search?keyword=3人坠亡小区物业：业主自行封装阳台)
 1. [11岁失联女孩遇害：发现时遗体被埋](https://so.toutiao.com/search?keyword=11岁失联女孩遇害：发现时遗体被埋)
+1. [网传北京某高校着火？实为消防演练](https://so.toutiao.com/search?keyword=网传北京某高校着火？实为消防演练)
+1. [大风吹倒门爸爸神反应替女儿挡住](https://so.toutiao.com/search?keyword=大风吹倒门爸爸神反应替女儿挡住)
+1. [台青看到比亚迪仰望U8目不转睛](https://so.toutiao.com/search?keyword=台青看到比亚迪仰望U8目不转睛)
+1. [直击南昌强对流天气现场](https://so.toutiao.com/search?keyword=直击南昌强对流天气现场)
+1. [曝乌袭击俄境内纵深1000公里处目标](https://so.toutiao.com/search?keyword=曝乌袭击俄境内纵深1000公里处目标)
+1. [落马市长还曾收受外甥贿赂520多万](https://so.toutiao.com/search?keyword=落马市长还曾收受外甥贿赂520多万)
+1. [搜救队员讲述遇害11岁女孩发现过程](https://so.toutiao.com/search?keyword=搜救队员讲述遇害11岁女孩发现过程)
+1. [徐帆携18岁女儿徐朵登上杂志封面](https://so.toutiao.com/search?keyword=徐帆携18岁女儿徐朵登上杂志封面)
+1. [3人坠亡小区物业：业主自行封装阳台](https://so.toutiao.com/search?keyword=3人坠亡小区物业：业主自行封装阳台)
+1. [女孩独自外出玩耍遇害 38岁嫌犯被抓](https://so.toutiao.com/search?keyword=女孩独自外出玩耍遇害+38岁嫌犯被抓)
+1. [华晨宇疑回应月经羞耻话题](https://so.toutiao.com/search?keyword=华晨宇疑回应月经羞耻话题)
+1. [司机遭遇1.7万修车费 官方：调查](https://so.toutiao.com/search?keyword=司机遭遇1.7万修车费+官方：调查)
+1. [陈震再回应小米SU7测评争议](https://so.toutiao.com/search?keyword=陈震再回应小米SU7测评争议)
+1. [开封王婆：如果小舞台乱了 会离开](https://so.toutiao.com/search?keyword=开封王婆：如果小舞台乱了+会离开)
+1. [贾跃亭造车至今共交付11辆并全召回](https://so.toutiao.com/search?keyword=贾跃亭造车至今共交付11辆并全召回)
+1. [博主：李铁给已瘫痪的队友一份营生](https://so.toutiao.com/search?keyword=博主：李铁给已瘫痪的队友一份营生)
+1. [吉利副总裁探店小米汽车：人不多](https://so.toutiao.com/search?keyword=吉利副总裁探店小米汽车：人不多)
+1. [海南交通厅厅长副厅长同时官宣被查](https://so.toutiao.com/search?keyword=海南交通厅厅长副厅长同时官宣被查)
+1. [170秒看懂中东“炸馆”事件](https://so.toutiao.com/search?keyword=170秒看懂中东“炸馆”事件)
+1. [叔叔把球踢给萌娃结果“爆头”了](https://so.toutiao.com/search?keyword=叔叔把球踢给萌娃结果“爆头”了)
+1. [父母因拆迁款如何分给儿女“吵起来”](https://so.toutiao.com/search?keyword=父母因拆迁款如何分给儿女“吵起来”)
+1. [女子指使猴子给自己剥橘子嗑瓜子](https://so.toutiao.com/search?keyword=女子指使猴子给自己剥橘子嗑瓜子)
+1. [提灯定损房屋或涉违建？官方回应](https://so.toutiao.com/search?keyword=提灯定损房屋或涉违建？官方回应)
+1. [美称未参与袭击伊朗使馆且事先不知情](https://so.toutiao.com/search?keyword=美称未参与袭击伊朗使馆且事先不知情)
+1. [体育生的饭量是个谜](https://so.toutiao.com/search?keyword=体育生的饭量是个谜)
+1. [乌击落俄军海鹰-10无人机画面曝光](https://so.toutiao.com/search?keyword=乌击落俄军海鹰-10无人机画面曝光)
+1. [五问提灯定损: 是否敲诈是否违建](https://so.toutiao.com/search?keyword=五问提灯定损:+是否敲诈是否违建)
+1. [开封王婆成立相亲婚介所](https://so.toutiao.com/search?keyword=开封王婆成立相亲婚介所)
+1. [开发商回应南昌3人被大风吹坠楼](https://so.toutiao.com/search?keyword=开发商回应南昌3人被大风吹坠楼)
+1. [第十届中国（鹤壁）樱花季启幕](https://so.toutiao.com/search?keyword=第十届中国（鹤壁）樱花季启幕)
+1. [菲总统姐姐：菲在南海“上头了”](https://so.toutiao.com/search?keyword=菲总统姐姐：菲在南海“上头了”)
+1. [美俄回应伊朗驻叙利亚使馆建筑遭袭](https://so.toutiao.com/search?keyword=美俄回应伊朗驻叙利亚使馆建筑遭袭)
+1. [克拉拉现场表演张元英转圈](https://so.toutiao.com/search?keyword=克拉拉现场表演张元英转圈)
+1. [华为P70全系入网](https://so.toutiao.com/search?keyword=华为P70全系入网)
+1. [主管教练：孙颖莎会做得更好](https://so.toutiao.com/search?keyword=主管教练：孙颖莎会做得更好)
+1. [伊万：中国队帅位有很多候选人](https://so.toutiao.com/search?keyword=伊万：中国队帅位有很多候选人)
+1. [东南亚若被迫在中美间选边站会站谁](https://so.toutiao.com/search?keyword=东南亚若被迫在中美间选边站会站谁)
+1. [余承东否认禁提“遥遥领先”](https://so.toutiao.com/search?keyword=余承东否认禁提“遥遥领先”)
+1. [A股收评：约2900家个股绿盘](https://so.toutiao.com/search?keyword=A股收评：约2900家个股绿盘)
+1. [小米SU7退订率40%](https://so.toutiao.com/search?keyword=小米SU7退订率40%)
 1. [乌克兰足坛传奇舍甫琴科参战？假的](https://so.toutiao.com/search?keyword=乌克兰足坛传奇舍甫琴科参战？假的)
 1. [马英九获大陆高规格接待背后有何深意](https://so.toutiao.com/search?keyword=马英九获大陆高规格接待背后有何深意)
-1. [提灯定损房屋或涉违建？官方回应](https://so.toutiao.com/search?keyword=提灯定损房屋或涉违建？官方回应)
 1. [南昌3人坠亡小区开发商曾涉贪腐大案](https://so.toutiao.com/search?keyword=南昌3人坠亡小区开发商曾涉贪腐大案)
-1. [美俄回应伊朗驻叙利亚使馆建筑遭袭](https://so.toutiao.com/search?keyword=美俄回应伊朗驻叙利亚使馆建筑遭袭)
-1. [大风吹倒门爸爸神反应替女儿挡住](https://so.toutiao.com/search?keyword=大风吹倒门爸爸神反应替女儿挡住)
-1. [博主：李铁给已瘫痪的队友一份营生](https://so.toutiao.com/search?keyword=博主：李铁给已瘫痪的队友一份营生)
-1. [女子指使猴子给自己剥橘子嗑瓜子](https://so.toutiao.com/search?keyword=女子指使猴子给自己剥橘子嗑瓜子)
-1. [华晨宇疑回应月经羞耻话题](https://so.toutiao.com/search?keyword=华晨宇疑回应月经羞耻话题)
-1. [女孩独自外出玩耍遇害 38岁嫌犯被抓](https://so.toutiao.com/search?keyword=女孩独自外出玩耍遇害+38岁嫌犯被抓)
-1. [开封王婆成立相亲婚介所](https://so.toutiao.com/search?keyword=开封王婆成立相亲婚介所)
 1. [房地产还有救吗](https://so.toutiao.com/search?keyword=房地产还有救吗)
 1. [伊朗爆发集会抗议以军袭击外交机构](https://so.toutiao.com/search?keyword=伊朗爆发集会抗议以军袭击外交机构)
-1. [开封王婆：如果小舞台乱了 会离开](https://so.toutiao.com/search?keyword=开封王婆：如果小舞台乱了+会离开)
 1. [玻璃窗为何会被吹走？专业人士解答](https://so.toutiao.com/search?keyword=玻璃窗为何会被吹走？专业人士解答)
 1. [美15岁女孩被父亲绑架后遭警方射杀](https://so.toutiao.com/search?keyword=美15岁女孩被父亲绑架后遭警方射杀)
-1. [克拉拉现场表演张元英转圈](https://so.toutiao.com/search?keyword=克拉拉现场表演张元英转圈)
 1. [主持人评万科董事长郁亮被实名举报](https://so.toutiao.com/search?keyword=主持人评万科董事长郁亮被实名举报)
-1. [170秒看懂中东“炸馆”事件](https://so.toutiao.com/search?keyword=170秒看懂中东“炸馆”事件)
 1. [以色列炸平伊朗使馆 更多细节流出](https://so.toutiao.com/search?keyword=以色列炸平伊朗使馆+更多细节流出)
-1. [叔叔把球踢给萌娃结果“爆头”了](https://so.toutiao.com/search?keyword=叔叔把球踢给萌娃结果“爆头”了)
 1. [孕妇店内分娩丈夫挂红布给红包感谢](https://so.toutiao.com/search?keyword=孕妇店内分娩丈夫挂红布给红包感谢)
-1. [台青看到比亚迪仰望U8目不转睛](https://so.toutiao.com/search?keyword=台青看到比亚迪仰望U8目不转睛)
 1. [伊朗愤怒民众焚烧美以国旗](https://so.toutiao.com/search?keyword=伊朗愤怒民众焚烧美以国旗)
-1. [菲总统姐姐：菲在南海“上头了”](https://so.toutiao.com/search?keyword=菲总统姐姐：菲在南海“上头了”)
-1. [司机遭遇1.7万修车费 官方：调查](https://so.toutiao.com/search?keyword=司机遭遇1.7万修车费+官方：调查)
 1. [大V：提灯定损引网友愤怒的8个原因](https://so.toutiao.com/search?keyword=大V：提灯定损引网友愤怒的8个原因)
-1. [华为P70全系入网](https://so.toutiao.com/search?keyword=华为P70全系入网)
 1. [11岁女孩遇害 家属：不认识嫌疑人](https://so.toutiao.com/search?keyword=11岁女孩遇害+家属：不认识嫌疑人)
 1. [媒体：“提灯定损”戳中租房者痛点](https://so.toutiao.com/search?keyword=媒体：“提灯定损”戳中租房者痛点)
 1. [伊朗称已对使馆建筑遭袭作适当决定](https://so.toutiao.com/search?keyword=伊朗称已对使馆建筑遭袭作适当决定)
@@ -53,21 +77,17 @@
 1. [不足额支付代驾费 代驾小哥讨说法](https://so.toutiao.com/search?keyword=不足额支付代驾费+代驾小哥讨说法)
 1. [外交部回应伊朗驻叙利亚使馆遭袭](https://so.toutiao.com/search?keyword=外交部回应伊朗驻叙利亚使馆遭袭)
 1. [曝拜登考虑批准180亿美元对以军售](https://so.toutiao.com/search?keyword=曝拜登考虑批准180亿美元对以军售)
-1. [吉利副总裁探店小米汽车：人不多](https://so.toutiao.com/search?keyword=吉利副总裁探店小米汽车：人不多)
 1. [唐一军被查 曾任司法部部长](https://so.toutiao.com/search?keyword=唐一军被查+曾任司法部部长)
 1. [多地这样抢抓“春播期”](https://so.toutiao.com/search?keyword=多地这样抢抓“春播期”)
 1. [安理会将就以袭击伊朗使馆召开会议](https://so.toutiao.com/search?keyword=安理会将就以袭击伊朗使馆召开会议)
 1. [女生为拍视频找王婆说媒被轰下台](https://so.toutiao.com/search?keyword=女生为拍视频找王婆说媒被轰下台)
 1. [以空袭伊朗驻叙使馆正值下班高峰期](https://so.toutiao.com/search?keyword=以空袭伊朗驻叙使馆正值下班高峰期)
 1. [马英九访陆为何能二见老朋友](https://so.toutiao.com/search?keyword=马英九访陆为何能二见老朋友)
-1. [余承东否认禁提“遥遥领先”](https://so.toutiao.com/search?keyword=余承东否认禁提“遥遥领先”)
 1. [吴艳妮“霸王步”再现](https://so.toutiao.com/search?keyword=吴艳妮“霸王步”再现)
 1. [媒体：上饶应直面提灯定损讹诈质疑](https://so.toutiao.com/search?keyword=媒体：上饶应直面提灯定损讹诈质疑)
-1. [美称未参与袭击伊朗使馆且事先不知情](https://so.toutiao.com/search?keyword=美称未参与袭击伊朗使馆且事先不知情)
 1. [岛内热议马英九第二次“大陆行”](https://so.toutiao.com/search?keyword=岛内热议马英九第二次“大陆行”)
 1. [冯绍峰谈到儿子眼圈红了](https://so.toutiao.com/search?keyword=冯绍峰谈到儿子眼圈红了)
 1. [莫斯科恐袭案资助者遭审讯视频曝光](https://so.toutiao.com/search?keyword=莫斯科恐袭案资助者遭审讯视频曝光)
-1. [开发商回应南昌3人被大风吹坠楼](https://so.toutiao.com/search?keyword=开发商回应南昌3人被大风吹坠楼)
 1. [墓地价格飙升 殡葬毛利率逼近茅台](https://so.toutiao.com/search?keyword=墓地价格飙升+殡葬毛利率逼近茅台)
 1. [南昌夫妻分房睡妻子被吹下楼坠亡](https://so.toutiao.com/search?keyword=南昌夫妻分房睡妻子被吹下楼坠亡)
 1. [自闭症不是父母教养方式导致的](https://so.toutiao.com/search?keyword=自闭症不是父母教养方式导致的)
