--- a/archives/toutiao-search/2024-04-02.md
+++ b/archives/toutiao-search/2024-04-02.md
@@ -1,57 +1,72 @@
 # 2024-04-02
 
-共 324 条
+共 333 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Apr 02 2024 22:00:39 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Tue Apr 02 2024 23:00:43 GMT+0800 (China Standard Time) -->
 1. [提灯定损事件追踪](https://so.toutiao.com/search?keyword=提灯定损事件追踪)
-1. [南昌暴雨有房屋坍塌致1死3重伤](https://so.toutiao.com/search?keyword=南昌暴雨有房屋坍塌致1死3重伤)
-1. [2024年中非互联网发展与合作论坛](https://so.toutiao.com/search?keyword=2024年中非互联网发展与合作论坛)
 1. [伊朗最高领袖：以色列将受到惩罚](https://so.toutiao.com/search?keyword=伊朗最高领袖：以色列将受到惩罚)
+1. [2024年中非互联网发展与合作论坛](https://so.toutiao.com/search?keyword=2024年中非互联网发展与合作论坛)
+1. [菲律宾为何改变对南海问题态度](https://so.toutiao.com/search?keyword=菲律宾为何改变对南海问题态度)
 1. [马英九考解说员“孙中山穿几号鞋”](https://so.toutiao.com/search?keyword=马英九考解说员“孙中山穿几号鞋”)
-1. [111岁开国少将张力雄逝世](https://so.toutiao.com/search?keyword=111岁开国少将张力雄逝世)
-1. [直击南昌龙吸水工作现场](https://so.toutiao.com/search?keyword=直击南昌龙吸水工作现场)
+1. [黄坤明会见马英九一行](https://so.toutiao.com/search?keyword=黄坤明会见马英九一行)
+1. [专家解读南昌人被吹下楼：需12级风](https://so.toutiao.com/search?keyword=专家解读南昌人被吹下楼：需12级风)
 1. [央媒：提灯定损照出的是市场乱象](https://so.toutiao.com/search?keyword=央媒：提灯定损照出的是市场乱象)
 1. [00后体育生一顿吃一斤米饭](https://so.toutiao.com/search?keyword=00后体育生一顿吃一斤米饭)
-1. [专家解读南昌人被吹下楼：需12级风](https://so.toutiao.com/search?keyword=专家解读南昌人被吹下楼：需12级风)
+1. [专家：以色列轰炸伊朗大使馆必将遭报复](https://so.toutiao.com/search?keyword=专家：以色列轰炸伊朗大使馆必将遭报复)
 1. [11岁失联女孩遇害：发现时遗体被埋](https://so.toutiao.com/search?keyword=11岁失联女孩遇害：发现时遗体被埋)
 1. [福州福飞北路核辐射超标？不实](https://so.toutiao.com/search?keyword=福州福飞北路核辐射超标？不实)
-1. [中方回应以色列空袭伊朗驻叙使馆](https://so.toutiao.com/search?keyword=中方回应以色列空袭伊朗驻叙使馆)
-1. [徐帆携18岁女儿徐朵登上杂志封面](https://so.toutiao.com/search?keyword=徐帆携18岁女儿徐朵登上杂志封面)
-1. [小米回应SU7试驾车异响漏液](https://so.toutiao.com/search?keyword=小米回应SU7试驾车异响漏液)
-1. [专家：以色列轰炸伊朗大使馆必将遭报复](https://so.toutiao.com/search?keyword=专家：以色列轰炸伊朗大使馆必将遭报复)
 1. [江西又现租客退房纠纷事件](https://so.toutiao.com/search?keyword=江西又现租客退房纠纷事件)
+1. [111岁开国少将张力雄逝世](https://so.toutiao.com/search?keyword=111岁开国少将张力雄逝世)
+1. [中方回应以色列空袭伊朗驻叙使馆](https://so.toutiao.com/search?keyword=中方回应以色列空袭伊朗驻叙使馆)
 1. [南昌大风为什么能把人从被窝里吹走](https://so.toutiao.com/search?keyword=南昌大风为什么能把人从被窝里吹走)
-1. [15岁男孩跳楼身亡 家长称其被霸凌](https://so.toutiao.com/search?keyword=15岁男孩跳楼身亡+家长称其被霸凌)
-1. [江西省政协主席唐一军被查](https://so.toutiao.com/search?keyword=江西省政协主席唐一军被查)
-1. [俄多名女子街头上演全裸派对](https://so.toutiao.com/search?keyword=俄多名女子街头上演全裸派对)
-1. [菲律宾为何改变对南海问题态度](https://so.toutiao.com/search?keyword=菲律宾为何改变对南海问题态度)
-1. [网传南昌冰雹致火车迫停](https://so.toutiao.com/search?keyword=网传南昌冰雹致火车迫停)
-1. [江西盛产成语：提灯定损 天价彩礼](https://so.toutiao.com/search?keyword=江西盛产成语：提灯定损+天价彩礼)
-1. [巴基斯坦恐袭案遇难同胞遗体回祖国](https://so.toutiao.com/search?keyword=巴基斯坦恐袭案遇难同胞遗体回祖国)
-1. [女孩独自外出玩耍遇害 38岁嫌犯被抓](https://so.toutiao.com/search?keyword=女孩独自外出玩耍遇害+38岁嫌犯被抓)
+1. [小米回应SU7试驾车异响漏液](https://so.toutiao.com/search?keyword=小米回应SU7试驾车异响漏液)
 1. [8斤重大甲鱼钓上岸 取钩时光速逃跑](https://so.toutiao.com/search?keyword=8斤重大甲鱼钓上岸+取钩时光速逃跑)
-1. [中方：菲律宾在南海问题上背弃承诺](https://so.toutiao.com/search?keyword=中方：菲律宾在南海问题上背弃承诺)
+1. [江西省政协主席唐一军被查](https://so.toutiao.com/search?keyword=江西省政协主席唐一军被查)
 1. [搜救队员讲述遇害11岁女孩发现过程](https://so.toutiao.com/search?keyword=搜救队员讲述遇害11岁女孩发现过程)
-1. [公交司机突发心梗 临终前拉紧手刹](https://so.toutiao.com/search?keyword=公交司机突发心梗+临终前拉紧手刹)
-1. [中方：美无权依据公约主张外大陆架](https://so.toutiao.com/search?keyword=中方：美无权依据公约主张外大陆架)
-1. [贾跃亭造车至今共交付11辆并全召回](https://so.toutiao.com/search?keyword=贾跃亭造车至今共交付11辆并全召回)
-1. [三亚收费摄影师殴打免费给人拍照者](https://so.toutiao.com/search?keyword=三亚收费摄影师殴打免费给人拍照者)
-1. [美总统候选人：拜登对民主构成威胁](https://so.toutiao.com/search?keyword=美总统候选人：拜登对民主构成威胁)
-1. [以军称遭袭伊朗外交机构为军事建筑](https://so.toutiao.com/search?keyword=以军称遭袭伊朗外交机构为军事建筑)
+1. [俄多名女子街头上演全裸派对](https://so.toutiao.com/search?keyword=俄多名女子街头上演全裸派对)
+1. [徐帆携18岁女儿徐朵登上杂志封面](https://so.toutiao.com/search?keyword=徐帆携18岁女儿徐朵登上杂志封面)
+1. [男子高速遇交警 拿出假证秒被识破](https://so.toutiao.com/search?keyword=男子高速遇交警+拿出假证秒被识破)
 1. [南昌极端天气：乌云压境压迫感强](https://so.toutiao.com/search?keyword=南昌极端天气：乌云压境压迫感强)
-1. [大风吹倒门爸爸神反应替女儿挡住](https://so.toutiao.com/search?keyword=大风吹倒门爸爸神反应替女儿挡住)
-1. [以色列空袭伊朗使馆将如何影响局势](https://so.toutiao.com/search?keyword=以色列空袭伊朗使馆将如何影响局势)
+1. [女孩独自外出玩耍遇害 38岁嫌犯被抓](https://so.toutiao.com/search?keyword=女孩独自外出玩耍遇害+38岁嫌犯被抓)
+1. [中方：美无权依据公约主张外大陆架](https://so.toutiao.com/search?keyword=中方：美无权依据公约主张外大陆架)
+1. [直击南昌龙强对流天气实况](https://so.toutiao.com/search?keyword=直击南昌龙强对流天气实况)
+1. [慈善组织世界厨房7成员死于以空袭](https://so.toutiao.com/search?keyword=慈善组织世界厨房7成员死于以空袭)
+1. [江西盛产成语：提灯定损 天价彩礼](https://so.toutiao.com/search?keyword=江西盛产成语：提灯定损+天价彩礼)
+1. [以军称遭袭伊朗外交机构为军事建筑](https://so.toutiao.com/search?keyword=以军称遭袭伊朗外交机构为军事建筑)
+1. [15岁男孩跳楼身亡 家长称其被霸凌](https://so.toutiao.com/search?keyword=15岁男孩跳楼身亡+家长称其被霸凌)
 1. [继冰雹红警后南昌又发布大风红警](https://so.toutiao.com/search?keyword=继冰雹红警后南昌又发布大风红警)
+1. [以色列炸平伊朗使馆 更多细节流出](https://so.toutiao.com/search?keyword=以色列炸平伊朗使馆+更多细节流出)
+1. [公交司机突发心梗 临终前拉紧手刹](https://so.toutiao.com/search?keyword=公交司机突发心梗+临终前拉紧手刹)
+1. [马英九：两岸共同合作振兴中华](https://so.toutiao.com/search?keyword=马英九：两岸共同合作振兴中华)
+1. [曝乌袭击俄境内纵深1000公里处目标](https://so.toutiao.com/search?keyword=曝乌袭击俄境内纵深1000公里处目标)
+1. [网友调侃新成语《提灯定损》](https://so.toutiao.com/search?keyword=网友调侃新成语《提灯定损》)
+1. [华为分红770亿](https://so.toutiao.com/search?keyword=华为分红770亿)
+1. [王珞丹和赵小棠妈妈相差十岁](https://so.toutiao.com/search?keyword=王珞丹和赵小棠妈妈相差十岁)
+1. [雷军说最喜欢霞光紫SU7](https://so.toutiao.com/search?keyword=雷军说最喜欢霞光紫SU7)
+1. [大风吹倒门爸爸神反应替女儿挡住](https://so.toutiao.com/search?keyword=大风吹倒门爸爸神反应替女儿挡住)
+1. [开封王婆：网传婚介所跟我无关](https://so.toutiao.com/search?keyword=开封王婆：网传婚介所跟我无关)
+1. [广东梅州一农户花巨资平移4层楼房](https://so.toutiao.com/search?keyword=广东梅州一农户花巨资平移4层楼房)
+1. [南昌雷暴致砖房垮塌 屋主哭求老天](https://so.toutiao.com/search?keyword=南昌雷暴致砖房垮塌+屋主哭求老天)
+1. [小哥逆行撞上酒驾摩托车手致其死亡](https://so.toutiao.com/search?keyword=小哥逆行撞上酒驾摩托车手致其死亡)
+1. [三亚收费摄影师殴打免费给人拍照者](https://so.toutiao.com/search?keyword=三亚收费摄影师殴打免费给人拍照者)
+1. [贾跃亭造车至今共交付11辆并全召回](https://so.toutiao.com/search?keyword=贾跃亭造车至今共交付11辆并全召回)
+1. [租房给肯德基24年租金涨到320万](https://so.toutiao.com/search?keyword=租房给肯德基24年租金涨到320万)
+1. [司机遭遇1.7万修车费 官方：调查](https://so.toutiao.com/search?keyword=司机遭遇1.7万修车费+官方：调查)
+1. [11岁女孩遇害 家属：不认识嫌疑人](https://so.toutiao.com/search?keyword=11岁女孩遇害+家属：不认识嫌疑人)
+1. [南昌暴雨有房屋坍塌致1死3重伤](https://so.toutiao.com/search?keyword=南昌暴雨有房屋坍塌致1死3重伤)
+1. [直击南昌龙吸水工作现场](https://so.toutiao.com/search?keyword=直击南昌龙吸水工作现场)
+1. [网传南昌冰雹致火车迫停](https://so.toutiao.com/search?keyword=网传南昌冰雹致火车迫停)
+1. [巴基斯坦恐袭案遇难同胞遗体回祖国](https://so.toutiao.com/search?keyword=巴基斯坦恐袭案遇难同胞遗体回祖国)
+1. [中方：菲律宾在南海问题上背弃承诺](https://so.toutiao.com/search?keyword=中方：菲律宾在南海问题上背弃承诺)
+1. [美总统候选人：拜登对民主构成威胁](https://so.toutiao.com/search?keyword=美总统候选人：拜登对民主构成威胁)
+1. [以色列空袭伊朗使馆将如何影响局势](https://so.toutiao.com/search?keyword=以色列空袭伊朗使馆将如何影响局势)
 1. [克拉拉现场表演张元英转圈](https://so.toutiao.com/search?keyword=克拉拉现场表演张元英转圈)
 1. [伊朗总统：以色列罪行势必得到回应](https://so.toutiao.com/search?keyword=伊朗总统：以色列罪行势必得到回应)
-1. [王珞丹和赵小棠妈妈相差十岁](https://so.toutiao.com/search?keyword=王珞丹和赵小棠妈妈相差十岁)
-1. [曝乌袭击俄境内纵深1000公里处目标](https://so.toutiao.com/search?keyword=曝乌袭击俄境内纵深1000公里处目标)
 1. [江苏10万游客2天吃掉20万斤螺蛳](https://so.toutiao.com/search?keyword=江苏10万游客2天吃掉20万斤螺蛳)
 1. [大连星海湾大桥建设方被罚2700万](https://so.toutiao.com/search?keyword=大连星海湾大桥建设方被罚2700万)
 1. [主持人评万科董事长郁亮被实名举报](https://so.toutiao.com/search?keyword=主持人评万科董事长郁亮被实名举报)
 1. [官方回应午托班员工将小孩摔地上](https://so.toutiao.com/search?keyword=官方回应午托班员工将小孩摔地上)
-1. [广东梅州一农户花巨资平移4层楼房](https://so.toutiao.com/search?keyword=广东梅州一农户花巨资平移4层楼房)
 1. [王婆说媒启动预约实名制](https://so.toutiao.com/search?keyword=王婆说媒启动预约实名制)
 1. [房地产还有救吗](https://so.toutiao.com/search?keyword=房地产还有救吗)
 1. [制造业产需指数向好预示着什么](https://so.toutiao.com/search?keyword=制造业产需指数向好预示着什么)
@@ -61,11 +76,8 @@
 1. [以轰炸伊朗使馆会引发中东新大战吗](https://so.toutiao.com/search?keyword=以轰炸伊朗使馆会引发中东新大战吗)
 1. [周鸿祎谈小米为什么要造车](https://so.toutiao.com/search?keyword=周鸿祎谈小米为什么要造车)
 1. [山火烧过的土地正在被春天治愈](https://so.toutiao.com/search?keyword=山火烧过的土地正在被春天治愈)
-1. [开封王婆：网传婚介所跟我无关](https://so.toutiao.com/search?keyword=开封王婆：网传婚介所跟我无关)
-1. [司机遭遇1.7万修车费 官方：调查](https://so.toutiao.com/search?keyword=司机遭遇1.7万修车费+官方：调查)
 1. [五问提灯定损: 是否敲诈是否违建](https://so.toutiao.com/search?keyword=五问提灯定损:+是否敲诈是否违建)
 1. [开封王婆坦言自己追的老公](https://so.toutiao.com/search?keyword=开封王婆坦言自己追的老公)
-1. [租房给肯德基24年租金涨到320万](https://so.toutiao.com/search?keyword=租房给肯德基24年租金涨到320万)
 1. [3人坠亡小区物业：业主自行封装阳台](https://so.toutiao.com/search?keyword=3人坠亡小区物业：业主自行封装阳台)
 1. [西首相谈慈善组织成员加沙遇袭身亡](https://so.toutiao.com/search?keyword=西首相谈慈善组织成员加沙遇袭身亡)
 1. [直击南昌房屋坍塌事故现场](https://so.toutiao.com/search?keyword=直击南昌房屋坍塌事故现场)
@@ -125,11 +137,9 @@
 1. [伊朗爆发集会抗议以军袭击外交机构](https://so.toutiao.com/search?keyword=伊朗爆发集会抗议以军袭击外交机构)
 1. [玻璃窗为何会被吹走？专业人士解答](https://so.toutiao.com/search?keyword=玻璃窗为何会被吹走？专业人士解答)
 1. [美15岁女孩被父亲绑架后遭警方射杀](https://so.toutiao.com/search?keyword=美15岁女孩被父亲绑架后遭警方射杀)
-1. [以色列炸平伊朗使馆 更多细节流出](https://so.toutiao.com/search?keyword=以色列炸平伊朗使馆+更多细节流出)
 1. [孕妇店内分娩丈夫挂红布给红包感谢](https://so.toutiao.com/search?keyword=孕妇店内分娩丈夫挂红布给红包感谢)
 1. [伊朗愤怒民众焚烧美以国旗](https://so.toutiao.com/search?keyword=伊朗愤怒民众焚烧美以国旗)
 1. [大V：提灯定损引网友愤怒的8个原因](https://so.toutiao.com/search?keyword=大V：提灯定损引网友愤怒的8个原因)
-1. [11岁女孩遇害 家属：不认识嫌疑人](https://so.toutiao.com/search?keyword=11岁女孩遇害+家属：不认识嫌疑人)
 1. [伊朗称已对使馆建筑遭袭作适当决定](https://so.toutiao.com/search?keyword=伊朗称已对使馆建筑遭袭作适当决定)
 1. [男子上王婆说媒相亲下台被甩](https://so.toutiao.com/search?keyword=男子上王婆说媒相亲下台被甩)
 1. [不足额支付代驾费 代驾小哥讨说法](https://so.toutiao.com/search?keyword=不足额支付代驾费+代驾小哥讨说法)
@@ -152,7 +162,6 @@
 1. [气象分析：清明假期天气怎么样](https://so.toutiao.com/search?keyword=气象分析：清明假期天气怎么样)
 1. [国内外黄金价格加速上涨 专家提示](https://so.toutiao.com/search?keyword=国内外黄金价格加速上涨+专家提示)
 1. [香港：公众假期多区市面平淡](https://so.toutiao.com/search?keyword=香港：公众假期多区市面平淡)
-1. [网友调侃新成语《提灯定损》](https://so.toutiao.com/search?keyword=网友调侃新成语《提灯定损》)
 1. [台民众挺马英九赴陆交流](https://so.toutiao.com/search?keyword=台民众挺马英九赴陆交流)
 1. [以色列空袭伊朗驻叙使馆致7死](https://so.toutiao.com/search?keyword=以色列空袭伊朗驻叙使馆致7死)
 1. [韵达回应转卖退件快递：正在核实](https://so.toutiao.com/search?keyword=韵达回应转卖退件快递：正在核实)
